# Typing

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.smpGSZ  README.md
.github/workflows/: cmake-linux-platform.yml  cmake-multi-platform.yml
src/: ComboBoxManager.h  DBTreningQuery.h  json_text_parser.cpp  json_text_parser.h  jsonconfigparser.cpp  jsonconfigparser.h  lyrics.json  mainwindow.cpp  mainwindow.h  resultwindow.h  resultwindow.ui  startwindow.cpp  startwindow.h  startwindow.ui  typingtestingpage.h  virtual_keyboard.cpp  virtual_keyboard.h
src/RATATYPE-C/: CMakeLists.txt  CharacterColorist.h  ComboBoxManager.h  CostomComboBox.h  DBTestingQuery.h  DBTreningQuery.h  IColorizeCharacter.h  IDBManager.h  IJsonTextParser.h  RandomElementPicker.h  TypingSpeedCalculator.h  blindtypingtest.cpp  blindtypingtest.h  course.json  incorrectkeyboardlayout.cpp  incorrectkeyboardlayout.h  incorrectkeyboardlayout.ui  jsonconfigparser.cpp  jsonconfigparser.h  keyboardlayoutlanguagecontroller.cpp  keyboardlayoutlanguagecontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgStyle.css  resultwindow.cpp  resultwindow.h  resultwindow.ui  resurce.qrc  startwindow.cpp  startwindow.h  startwindow.ui  tableoutput.cpp  tableoutput.h  text_for_print_json.cpp  text_for_print_json.h  tst_firsttest.cpp  typingtestingpage.cpp  typingtestingpage.h  (+6 more)
src/TypingTrainer/: CMakeCache.txt  CMakeLists.txt  CharacterColorist.h  IRandomTextProvider.h  ITypingSpeedCalculator.h  ResourceCopier.h  TypingSpeedCalculator.h  course.json  main.cpp  mainwindow.cpp  mainwindow.ui  resultwindow.cpp  resurce.qrc  startwindow.cpp  tableoutput.cpp  tests.cpp  typingtestingpage.cpp  ui_mainwindow.h  vector_of_exercises.h  virtual_keyboard.h
tests/: CMakeLists.txt  main.cpp  test_bdmanager.cpp  test_bdmanager.h  test_jsonfileparser.cpp  test_jsonfileparser.h  test_virtualkeyboard.cpp  test_virtualkeyboard.h  ui_mainwindow.h  ui_resultwindow.h  ui_startwindow.h
